syntax = "proto3";
package api.v1;
option go_package = "gen/go";


message CreateNoteRequest {
  string auth_token = 1;
  string title = 2;
  string content = 3;
}

message CreateNoteReply {
  string message = 1;
}

message GetNoteRequest {
  string auth_token = 1;
  string id = 2;
}

message GetNoteReply {
  string id = 1;
  string title = 2;
  string content = 3;
}

service Note {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteReply) {}
  rpc GetNote (GetNoteRequest) returns (GetNoteReply) {}
}